--- a/WebFinalApp/WebFinalApp/WebFinalApp.csproj
+++ b/WebFinalApp/WebFinalApp/WebFinalApp.csproj
@@ -6,13 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\scripts\" />
-    <Folder Include="wwwroot\style\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
