Too many things...

--- a/WebFinalApp/WebFinalApp/app.config
+++ b/WebFinalApp/WebFinalApp/app.config
@@ -4,6 +4,6 @@
     <gcServer enabled="true"/>
   </runtime>
 	<connectionStrings>
-		<add name="WebFinalContext" connectionString="data source=DESKTOP-810T9T0;initial catalog=WebFinalDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="WebFinalContext" connectionString="data source=webfinalappdbserver.database.windows.net;initial catalog=WebFinalDB;persist security info=True;user id=kito;password=final_manna_061;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
