--- a/WebFinalApp/WebFinalApp/WebFinalApp.csproj
+++ b/WebFinalApp/WebFinalApp/WebFinalApp.csproj
@@ -10,6 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Security.KeyVault.Keys" Version="4.0.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.0.0" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="MailKit" Version="2.10.1" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
@@ -18,6 +20,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Configuration.ConfigurationBuilders.Azure" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
