--- a/.gitignore
+++ b/.gitignore
@@ -485,3 +485,5 @@ MigrationBackup/
 .ionide/
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,aspnetcore
+
+/WebFinalApp/WebFinalApp/Models/Constants.cs
